# sigil-stitch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  pages.yml
doc/src/: SUMMARY.md  adding_a_language.md  architecture.md  introduction.md  type_presentation.md
docs/: book.toml
docs/src/: SUMMARY.md  adding_a_language.md  architecture.md  code_templates.md  cookbook_c.md  cookbook_cpp.md  cookbook_go.md  (+23 more)
examples/: c_codegen.rs  code_fragments.rs  cpp_codegen.rs  dart_codegen.rs  go_codegen.rs  inline_control_flow.rs  java_codegen.rs  js_codegen.rs  kotlin_codegen.rs  language_spacing.rs  macro_features.rs  multi_language_project.rs  php_codegen.rs  python_codegen.rs  ruby_codegen.rs  rust_codegen.rs  swift_codegen.rs  typescript_hello_world.rs  zsh_codegen.rs
src/: code_block.rs  code_node.rs  code_renderer.rs  code_template.rs  error.rs  import.rs  import_collector.rs  lib.rs  name_allocator.rs  type_name.rs  type_name_import.rs  type_name_render.rs
tests/: annotation_spec_tests.rs  bash_tests.rs  c_lang_tests.rs  constructor_spec_tests.rs  cpp_lang_tests.rs  dart_lang_tests.rs  edge_case_tests.rs  field_spec_tests.rs  file_spec_tests.rs  fun_spec_tests.rs  go_lang_tests.rs  import_spec_tests.rs  java_lang_tests.rs  js_lang_tests.rs  kotlin_lang_tests.rs  macro_golden_tests.rs  macro_tests.rs  phase2_c_tests.rs  phase2_cpp_tests.rs  phase2_dart_tests.rs  phase2_go_tests.rs  phase2_java_tests.rs  phase2_js_tests.rs  phase2_kotlin_tests.rs  phase2_python_tests.rs  phase2_rust_tests.rs  phase2_swift_tests.rs  phase2_typescript_tests.rs  project_spec_tests.rs  property_spec_tests.rs  python_tests.rs  rust_lang_tests.rs  swift_lang_tests.rs  template_tests.rs  type_spec_tests.rs  typescript_tests.rs  zsh_tests.rs
(+541 files in other folders)
