[workspace]
members = ["macros"]
resolver = "3"

[workspace.package]
version = "0.6.8"
edition = "2024"
rust-version = "1.88.0"
license = "MIT OR Apache-2.0"
authors = ["Adam Cavendish"]
repository = "https://github.com/rust-codegen-group/sigil-stitch"
homepage = "https://github.com/rust-codegen-group/sigil-stitch"

[package]
name = "sigil-stitch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Type-safe, import-aware, width-aware code generation for multiple languages"
readme = "README.md"
keywords = ["codegen", "code-generation", "pretty-printing", "multi-language", "builder"]
categories = ["development-tools"]
exclude = [
    ".github/",
    "coverage/",
    "docs/",
    "test-goldens/",
    "Justfile",
]

[dependencies]
pretty = "0.12"
snafu = "0.9"
sigil-stitch-macros = { path = "macros", version = "0.6.8" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
